# natto

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
book_responses/: kings_gambit.json  opening.json  queens_gambit.json
docs/: copy-make-move-vs-make-unmake-move.md  move-tables-and-hashmaps.md
docs/flamegraphs/: flamegraph.html
src/: Move.rs  array_board.rs  bit_board.rs  board.rs  book.rs  chess_engine.rs  chess_move.rs  chess_util.rs  chessboard.rs  config.rs  core.rs  dpec.rs  engine.rs  eval.rs  fen.rs  game.rs  lib.rs  magic_bitboard.rs  main.rs  map_board.rs  move.rs  move_formatter.rs  move_generator.rs  moves.rs  moves_cache.rs  moves_generator.rs  node_counter.rs  opening_book.rs  piece_score_tables.rs  position.rs  search.rs  sorted_move_list.rs  tablebase.rs  uci.rs  util.rs  utils.rs
src/book/: lichess_book.rs  opening_book.rs
src/chess_util/: bitboard_iterator.rs  fen.rs  move_formatter.rs  sq_macro_generator.rs  util.rs
src/chessboard/: board.rs  piece.rs  position.rs
src/core/: board.rs  move.rs  move_gen.rs  move_generator.rs  piece.rs  position.rs
src/engine/: config.rs  engine.rs  uci.rs  uci_interface.rs
src/eval/: evaluation.rs  kings.rs  node_counter.rs  opening_book.rs  pawns.rs  perf_t.rs  psq.rs  quiescence.rs  search.rs  sorted_move_list.rs  ttable.rs
src/evaluation/: mod.rs  opening_book.rs  piece_score_tables.rs  search.rs  sorted_move_list.rs  ttable.rs
src/opening_book/: lichess_book.rs  opening_book.rs
src/search/: move_ordering.rs  negamax.rs  quiescence.rs  sorted_move_list.rs  transposition_table.rs
src/tablebase/: syzygy.rs
src/test_data/: fen_test_data.json
src/uci/: config.rs  logger_controller.rs  logging.rs  uci_interface.rs  uci_util.rs
tests/: node_count_test.rs  unwanted_draws_test.rs
(+15 files in other folders)
