[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
once_cell = "1.20.2"
crossbeam-channel = "0.5.14"
bitintr = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
json5 = "0.4.1"
serde_derive = "1.0.217"
serde_json = "1.0.134"