[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version="0.11.3", features = ["macros"] }
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
once_cell = "1.20.2"
crossbeam-channel = "0.5.14"
bitintr = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
json5 = "0.4.1"
serde_derive = "1.0.217"
serial_test = "2.0"
itertools = "0.14.0"
log = "0.4.25"
fern = "0.7.1"
chrono = "0.4.39"  # For timestamps in logs
dirs = "6.0.0"
dotenv = "0.15.0"