[package]
name = "chess_engine"
version = "0.1.5"
authors = ["Richard Glenister <rglenister@yahoo.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
phf = { version="0.11.3", features = ["macros"] }
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
once_cell = "1.21.0"
bitintr = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
json5 = "0.4.1"
#serde_derive = "1.0.219"
serial_test = "3.2.0"
itertools = "0.14.0"
log = "0.4.25"
fern = "0.7.1"
chrono = "0.4.39"  # For timestamps in logs
dotenv = "0.15.0"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde_derive = "1.0.219"
thiserror = "2.0.12"
arrayvec = "0.7.6"
clap = { version = "4.5.35", features = ["env", "derive"] }
rayon = "1.10.0"
shakmaty = "0.27.3"
shakmaty-syzygy = "0.25.3"